--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -264,139 +264,23 @@
 
 <script type="text/javascript">
     $(document).ready(function (){
-        var args=[
-            {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
-            {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
-            {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
-            {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
-                    //WEEK
-                    {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
-                    {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
-                    {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:200,everyDay:false,time_range:null},
-                    {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:200,everyDay:false,time_range:null},
-                    //MONTH
-                    {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
-                    {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
-                    {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:300,everyDay:false,time_range:null},
-                    {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:300,everyDay:false,time_range:null},
-
-                    //E1 last 4 week
-                    {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"E1",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"E1",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    //PPM last 4 week
-                    {kpi:"PPM_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"PPM_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"PPM_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"PPM_L",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    //RFT last 4 week
-                    {kpi:"RFT_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"RFT_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"RFT_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    //EEO last 4 week
-                    {kpi:"OEE_L",departmentArray:['BU-MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"OEE_L",departmentArray:['BU-GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    {kpi:"OEE_L",departmentArray:['BU-VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
-                    //E1 last 7 day
-            {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                    //PPM last 7 day
-            {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                    //RFT last 7 day
-            {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-                    //EEO last 7 day
-            {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-            {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
-
-
-        ], i,
-                $targets=$("#dashBoard-show-full").find(".example-container");
-
-        for(i=0;i<args.length;i++){
-            (function(i){
-                var item=args[i];
-                if(!item.everyDay){
-                    $.get("/dashboard_items/fake_data",
-                            {kpi:item.kpi,department:item.departmentArray,interval:item.interval},
-                            function(data){
-                                var height=function(i){
-                                    if($targets.eq(i).parents(".gs-w").height()===0){
-                                        return height(++i);
-                                    }
-                                    else{
-                                        return $targets.eq(i).parents(".gs-w").height();
-                                    }
-                                }
-                                if($targets.eq(i).highcharts()){
-                                    $targets.eq(i).highcharts().destroy();
-                                }
-                                var boolPPM=item.kpi.indexOf("PPM");
-                                var option={
-                                    height:height(i),
-                                    target:$targets.eq(i).attr("id"),
-                                    kpi:data.title,
-                                    date:data.time,
-                                    departmentArray:data.axis,
-                                    currentArray:data.value,
-                                    targetArray:data.target,
-                                    ppm:boolPPM===-1?0:1,
-                                    targetLine:false
-                                };
-                                var one=new DashBoardExampleChart(option);
-                                one.init();
-                            }
-                    )
-                }
-                else{
-                    $.get("/dashboard_items/fake_data_time",
-                            {kpi:item.kpi,department:item.departmentArray[0],interval:item.interval,time_range:item.time_range},
-                            function(data){
-                                var height=function(i){
-                                    if($targets.eq(i).parents(".gs-w").height()===0){
-                                        return height(++i);
-                                    }
-                                    else{
-                                        return $targets.eq(i).parents(".gs-w").height();
-                                    }
-                                }
-                                if($targets.eq(i).highcharts()){
-                                    $targets.eq(i).highcharts().destroy();
-                                }
-                                var boolPPM=item.kpi.indexOf("PPM");
-                                var option={
-                                    height:height(i),
-                                    target:$targets.eq(i).attr("id"),
-                                    kpi:data.title,
-                                    date:data.time,
-                                    departmentArray:data.axis,
-                                    currentArray:data.value,
-                                    targetArray:data.target,
-                                    ppm:boolPPM===-1?0:1,
-                                    targetLine:true
-                                };
-                                var one=new DashBoardExampleChart(option);
-                                one.init();
-                            }
-                    )
-                }
-            })(i);
-
-        }
-        window.setInterval(function(){
+        $("body").on('click',"#full-size-btn",function(){
             var args=[
                         {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
                         {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
                         {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
                         {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
+                        //WEEK
+                        {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
+                        {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:200,everyDay:false,time_range:null},
+                        {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:200,everyDay:false,time_range:null},
+                        {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:200,everyDay:false,time_range:null},
+                        //MONTH
+                        {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
+                        {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:300,everyDay:false,time_range:null},
+                        {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:300,everyDay:false,time_range:null},
+                        {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:300,everyDay:false,time_range:null},
+
                         //E1 last 4 week
                         {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
                         {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
@@ -508,10 +392,129 @@
                 })(i);
 
             }
-        },1000*60*30);
-        init_component();
-        DASHBOARD.init();
-        right_nav_main.init();
-        DASHBOARD.add.init();
+            window.setInterval(function(){
+                var args=[
+                            {kpi:"E1",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
+                            {kpi:"PPM_L",departmentArray:["MB","GM","VW","Cutting"],interval:100,everyDay:false,time_range:null},
+                            {kpi:"RFT_L",departmentArray:["MB","GM","VW"],interval:100,everyDay:false,time_range:null},
+                            {kpi:"OEE_L",departmentArray:["BU-MB","BU-GM","BU-VW"],interval:100,everyDay:false,time_range:null},
+                            //E1 last 4 week
+                            {kpi:"E1",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"E1",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"E1",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"E1",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            //PPM last 4 week
+                            {kpi:"PPM_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"PPM_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"PPM_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"PPM_L",departmentArray:['Cutting'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            //RFT last 4 week
+                            {kpi:"RFT_L",departmentArray:['MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"RFT_L",departmentArray:['GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"RFT_L",departmentArray:['VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            //EEO last 4 week
+                            {kpi:"OEE_L",departmentArray:['BU-MB'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"OEE_L",departmentArray:['BU-GM'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            {kpi:"OEE_L",departmentArray:['BU-VW'],interval:200,everyDay:true,time_range:"LAST4WEEK"},
+                            //E1 last 7 day
+                            {kpi:"E1",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"E1",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"E1",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"E1",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            //PPM last 7 day
+                            {kpi:"PPM_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"PPM_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"PPM_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"PPM_L",departmentArray:['Cutting'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            //RFT last 7 day
+                            {kpi:"RFT_L",departmentArray:['MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"RFT_L",departmentArray:['GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"RFT_L",departmentArray:['VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            //EEO last 7 day
+                            {kpi:"OEE_L",departmentArray:['BU-MB'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"OEE_L",departmentArray:['BU-GM'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+                            {kpi:"OEE_L",departmentArray:['BU-VW'],interval:100,everyDay:true,time_range:"LAST7DAY"},
+
+
+                        ], i,
+                        $targets=$("#dashBoard-show-full").find(".example-container");
+
+                for(i=0;i<args.length;i++){
+                    (function(i){
+                        var item=args[i];
+                        if(!item.everyDay){
+                            $.get("/dashboard_items/fake_data",
+                                    {kpi:item.kpi,department:item.departmentArray,interval:item.interval},
+                                    function(data){
+                                        var height=function(i){
+                                            if($targets.eq(i).parents(".gs-w").height()===0){
+                                                return height(++i);
+                                            }
+                                            else{
+                                                return $targets.eq(i).parents(".gs-w").height();
+                                            }
+                                        }
+                                        if($targets.eq(i).highcharts()){
+                                            $targets.eq(i).highcharts().destroy();
+                                        }
+                                        var boolPPM=item.kpi.indexOf("PPM");
+                                        var option={
+                                            height:height(i),
+                                            target:$targets.eq(i).attr("id"),
+                                            kpi:data.title,
+                                            date:data.time,
+                                            departmentArray:data.axis,
+                                            currentArray:data.value,
+                                            targetArray:data.target,
+                                            ppm:boolPPM===-1?0:1,
+                                            targetLine:false
+                                        };
+                                        var one=new DashBoardExampleChart(option);
+                                        one.init();
+                                    }
+                            )
+                        }
+                        else{
+                            $.get("/dashboard_items/fake_data_time",
+                                    {kpi:item.kpi,department:item.departmentArray[0],interval:item.interval,time_range:item.time_range},
+                                    function(data){
+                                        var height=function(i){
+                                            if($targets.eq(i).parents(".gs-w").height()===0){
+                                                return height(++i);
+                                            }
+                                            else{
+                                                return $targets.eq(i).parents(".gs-w").height();
+                                            }
+                                        }
+                                        if($targets.eq(i).highcharts()){
+                                            $targets.eq(i).highcharts().destroy();
+                                        }
+                                        var boolPPM=item.kpi.indexOf("PPM");
+                                        var option={
+                                            height:height(i),
+                                            target:$targets.eq(i).attr("id"),
+                                            kpi:data.title,
+                                            date:data.time,
+                                            departmentArray:data.axis,
+                                            currentArray:data.value,
+                                            targetArray:data.target,
+                                            ppm:boolPPM===-1?0:1,
+                                            targetLine:true
+                                        };
+                                        var one=new DashBoardExampleChart(option);
+                                        one.init();
+                                    }
+                            )
+                        }
+                    })(i);
+
+                }
+            },1000*60*30);
+            init_component();
+            DASHBOARD.init();
+            right_nav_main.init();
+            DASHBOARD.add.init();
+        });
+
     });
 </script>
