--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -45,6 +45,9 @@
             <a href="<%= mine_kpi_subscribes_path %>" guide-name="analyze_menu">
               <span><%= t 'menu.subscription' %></span> </a>
           </li>
+          <li>
+            <a href="<%= reports_path%>"><span>Report Center</span></a>
+          </li>
       <% end %>
       <li>
         <a href="<%= analyse_kpi_entries_path %>" guide-name="analyze_menu"> <span><%= t 'menu.analytics' %></span> </a>
