out of power,switch to PC

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,13 +37,13 @@
 *= require Log
 *= require treeview
 
-*= require STYLE
 *= require Manage-attribute
 *= require Analytics
 *= require EntryScss
 *= require layout
 *= require story_sets
 *= require kpi_subscribes
+*= require reports
 
 *= require stories.css
 
