--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -1,3 +1,16 @@
-<div>
+<section class="current-status">
+  <div class="header">
+    <div class="left">
+      <p>First Time Quality (FTQ) Summary Percentage</p>
+      <p></p>
+      <p>Early shift</p>
+    </div>
+    <div class="right">
+      <p></p>
+      <select>
+        <option>wangzixiao</option>
 
-</div>
+      </select>
+    </div>
+  </div>
+</section>
