--- a/app/assets/stylesheets/STYLE.scss
+++ b/app/assets/stylesheets/STYLE.scss
@@ -4,7 +4,7 @@ $red:#f75460;
 $red-hover:#f59b9b;
 $green:#0cb156;
 $green-hover:transparentize($green,0.4);
-
+$nav-dark:#353a46;
 @mixin transition($element){
   transition:$element ease-out 0.25s
 }
@@ -41,6 +41,11 @@ $green-hover:transparentize($green,0.4);
   content:"";
   display:block;
   clear: both;
+}
+@mixin box-sizing-border{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 /*************************************************************  button style
 *********************************************************************************************************/
