--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -1,3 +1,107 @@
 // Place all the styles related to the Reports controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "STYLE";
+// #left part
+$main-height:600px - 70px;
+.report-menu{
+  @include box-sizing-border;
+  float:left;
+  width:220px;
+  min-height: $main-height;
+  height:calc( 100% - 70px );
+  position:relative;
+  section{
+    background:lighten($nav-dark,4%);
+    height:100%;
+    &>.header{
+      width:100%;
+      height:50px;
+      p{
+        text-align:center;
+        color:#fff;
+        font-family:'avenir';
+        padding:14px 0px;
+        font-size:18px;
+      }
+    }
+    &>ul{
+      $li-padding:10px;
+      &>p{
+        color:lighten($nav-dark,25%);
+        font-size:13px;
+        padding-left:$li-padding;
+        margin:5px 0 0px;
+      }
+      li{
+        a{
+          $vertical-padding:8px;
+          i{
+            font-size:11px;
+            display:inline-block;
+            &.mark{
+              margin-right:10px;
+            }
+            &.indicate{
+              float:right;
+              margin-top:3px;
+              display: none;
+            }
+          }
+          cursor:pointer;
+          color:rgba(255,255,255,0.8);
+          font-size:14px;
+          display:block;
+          padding:$vertical-padding $li-padding;
+          width:100%;
+          @include box-sizing-border;
+          &:hover{
+            color:#fff;
+            background:lighten($nav-dark,25%);
+          }
+          &.active{
+            color:#fff;
+            background:lighten($nav-dark,25%);
+            i{
+              &.indicate{
+                display:inline-block;
+              }
+            }
+          }
+        }
+      }
+    }
+    &>a.btn{
+      position:absolute;
+      font-size:14px;
+      width:140px;
+      &.snap{
+        bottom:30px;
+      }
+      &.share{
+        bottom:80px;
+      }
+    }
+  }
+}
+// #right part
+.report-content{
+  @include box-sizing-border;
+  float:left;
+  height:calc( 100% - 70px );
+  width:calc( 100% - 220px );
+  .current-status{
+    .header{
+      .left{
+        float:left;
+        @include box-sizing-border;
+        width:50%;
+      }
+      .right{
+        float:left;
+        @include box-sizing-border;
+        width:50%;
+      }
+    }
+  }
+}
