--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,5 +1,6 @@
 <%= render "my-reports" %>
 <div class="report-content">
+  <!--<%= render "grid"%>-->
   <%= render "current-status"%>
 </div>
 <script src="../../assets/javascripts/sea-modules/seajs/2.3.0/dist/sea.js" id="seajsnode"></script>
