--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -35,7 +35,7 @@ $main-height:600px - 70px;
       }
       li{
         a{
-          $vertical-padding:8px;
+          $vertical-padding:7px;
           i{
             font-size:11px;
             display:inline-block;
@@ -90,6 +90,7 @@ $main-height:600px - 70px;
   float:left;
   height:calc( 100% - 70px );
   width:calc( 100% - 220px );
+  // >>>>>>>>>>>>>>>>>>>current status
   .current-status{
     .header{
       .left{
@@ -103,5 +104,8 @@ $main-height:600px - 70px;
         width:50%;
       }
     }
+    width:100%;
+    height:55px;
+    border-bottom:1px solid rgba(0,0,0,0.2);
   }
 }
