--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -2,14 +2,9 @@
 <div class="report-content">
   <%= render "current-status"%>
 </div>
-<script src="../../assets/javascripts/sea-modules/seajs/2.3.0/dist/sea.js" id="seajsnode"></script>
-<script>
-    seajs.config({
-        base:"../../assets/javascripts/sea-modules/",
-        alias: {
-            "jquery":"jquery/1.8.3/jquery",
-            "highcharts":"highcharts/4.0.1/highcharts"
-        }
-    });
-    seajs.use("test/main");
-</script>
+<% content_for :javascript_includes do%>
+    <!-- alias js -->
+    <%= javascript_include_tag "func-module/format_time.js"%>
+    <!-- specify js -->
+    <%= javascript_include_tag "reports/main.js"%>
+<%end%>
