--- a/app/views/reports/_data-view.html.erb
+++ b/app/views/reports/_data-view.html.erb
@@ -1,51 +1,88 @@
-<div id="data_container" style="border:1px solid #A4BED4; background-color:white; width:710px;height:392px;">
+<section class="current-status">
+  <div class="header">
+    <div class="left">
+      <p>First Time Quality (FTQ) Summary Percentage</p>
 
-</div>
-<input type="button" onclick="data.parse(Data2,'json')" value="ADD"></input>
+      <p id=""></p>
+
+      <p>Early shift</p>
+    </div>
+    <div class="right">
+      <p></p>
+      <select id="vechile-select">
+        <option>Vehicle_1</option>
+        <option>Vehicle_2</option>
+        <option>Vehicle_3</option>
+      </select>
+
+      <!-----------------Data View---------------------------->
+      <div id="data_container" style="border:1px solid #A4BED4; background-color:white; width:710px;height:392px;">
+
+      </div>
+      <!-----------------Data View---------------------------->
+    </div>
+  </div>
+</section>
 
 <% content_for :javascript_includes do %>
     <%= javascript_include_tag "dhtmlxdataview" %>
+    <%= javascript_include_tag "data-view" %>
 <% end %>
 <script>
-  data = {}
+    data = {}
     $(document).ready(function () {
-        data = new dhtmlXDataView({
-            container: "data_container",
-            type: {
-                template: "<span class='dhx_strong'>Target: #Maintaner#</span>Defec: #Package# <span class='dhx_light'>Passed: #Version#</span>",
-                height: 35
-            }
+        DV.init("data_container");
+        DV.parse(vdata["Vehicle_1"]);
+
+        $("#vechile-select").change(function () {
+            DV.clear();
+            var a = $("#vechile-select option:selected").text();
+            console.log(a);
+            DV.parse(vdata[a]);
         });
-        data.parse(Data1, "json");
     });
 
-    Data1 = [
-        {
-            "id": "1",
-            "Package": "Shanghai",
-            "Version": "182.125",
-            "Maintaner": "CF001"
-        },
-        {
-            "id": "3",
-            "Package": "Wuhuan",
-            "Version": "182.125",
-            "Maintaner": "CF001"
-        }
-    ]
-
-    Data2 = [
-        {
-            "id": "1",
-            "Package": "Suzhou",
-            "Version": "125.235",
-            "Maintaner": "CF003"
-        },
-        {
-            "id": "2",
-            "Package": "Nanjing",
-            "Version": "125.235",
-            "Maintaner": "CF003"
-        }
-    ]
+    vdata = {
+        Vehicle_1: [
+            {
+                "id": "1",
+                "INQA": "iQ1",
+                "Defects": "20",
+                "Pass": "25",
+                "FTQ":"85%"
+            },
+            {
+                "id": "2",
+                "INQA": "iQ2",
+                "Defects": "20",
+                "Pass": "23",
+                "FTQ":"90%"
+            }
+        ],
+        Vehicle_2: [
+            {
+                "id": "1",
+                "INQA": "iQ Total",
+                "Defects": "20",
+                "Pass": "25",
+                "FTQ":"85%"
+            },
+            {
+                "id": "2",
+                "INQA": "iQ Door",
+                "Defects": "20",
+                "Pass": "21",
+                "FTQ":"81%"
+            }
+        ],
+        Vehicle_3: [
+            {
+                "id": "1",
+                "INQA": "iQ1",
+                "Defects": "20",
+                "Pass": "25",
+                "FTQ":"85%"
+            }
+        ]
+    }
 </script>
