--- a/app/assets/stylesheets/STYLE.scss
+++ b/app/assets/stylesheets/STYLE.scss
@@ -5,6 +5,7 @@ $red-hover:#f59b9b;
 $green:#0cb156;
 $green-hover:transparentize($green,0.4);
 $nav-dark:#353a46;
+$golden-text:#f2c54a;
 @mixin transition($element){
   transition:$element ease-out 0.25s
 }
@@ -26,6 +27,11 @@ $nav-dark:#353a46;
   box-shadow:$x $y $shadow $color;
   -moz-box-shadow:$x $y $shadow $color;
   -webkit-box-shadow:$x $y $shadow $color;
+}
+@mixin box-shadow-inset($x,$y,$shadow,$color){
+  box-shadow:$x $y $shadow $color inset;
+  -moz-box-shadow:$x $y $shadow $color inset;
+  -webkit-box-shadow:$x $y $shadow $color inset;
 }
 @mixin text-shadow($x,$y,$shadow,$color){
   text-shadow:$x $y $shadow $color;
