--- a/app/views/reports/_grid.html.erb
+++ b/app/views/reports/_grid.html.erb
@@ -10,6 +10,7 @@
   </select>
   <select multiple class="chosen-select" data-placeholder="Deffect Date" id="deffect-date">
   </select>
+  <input type="button" value="Retrieve Data" onclick="grid.filter()"/>
 </div>
 <div>
   <h1>Group By</h1>
