--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "my-reports" %>
 <div class="report-content">
-  <%= render "grid"%>
+  <%= render "data-view"%>
 </div>
 <% content_for :javascript_includes do%>
     <!-- alias js -->
