--- a/app/views/reports/_data-view.html.erb
+++ b/app/views/reports/_data-view.html.erb
@@ -22,5 +22,5 @@
     <%= javascript_include_tag "dhtmlxdataview" %>
     <%= javascript_include_tag "reports/data-view" %>
     <%= javascript_include_tag "reports/current_status" %>
-    <%= javascript_include_tag "reports/vdata" %>
+    <%= javascript_include_tag "reports/data-current-status" %>
 <% end %>
