--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -11,5 +11,6 @@
     <!-- alias js -->
     <%= javascript_include_tag "func-module/format_time.js"%>
     <!-- specify js -->
+    <%= javascript_include_tag "reports/report.js" %>
     <%= javascript_include_tag "reports/main.js"%>
 <%end%>
