--- a/app/views/reports/_grid.html.erb
+++ b/app/views/reports/_grid.html.erb
@@ -21,5 +21,5 @@
     <%= javascript_include_tag "dhtmlxgrid"%>
     <%= javascript_include_tag "func-module/chosen"%>
     <%= javascript_include_tag "reports/grid"%>
-    <%= javascript_include_tag "reports/grideData"%>
+    <%= javascript_include_tag "reports/data-dailu-dpv"%>
 <%end%>
