--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -13,6 +13,8 @@
     <li><a><i class="icon-dashboard mark"></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
   </ul>
   <a class="btn btn-primary share">Share to discussion</a>
-  <a class="btn btn-success snap">Snap shot</a>
+
+  <a class="btn btn-success snap" id="snap-shot-button">Snap shot</a>
+  <input type="text" id="snap-shot-desc" value="snap shot desc"/>
 </section>
 </div>
