--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,6 +44,7 @@
 *= require story_sets
 *= require kpi_subscribes
 *= require reports
+*= require dataview/dataview_tiem
 
 *= require stories.css
 
