--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -4,10 +4,11 @@
 @import "STYLE";
 // #left part
 $main-height:600px - 70px;
+$list-width:220px;
 .report-menu{
   @include box-sizing-border;
   float:left;
-  width:220px;
+  width:$list-width;
   min-height: $main-height;
   height:calc( 100% - 70px );
   position:relative;
@@ -150,7 +151,102 @@ $main-height:600px - 70px;
       background-color:#fff;
       width:100%;
       overflow-y:auto;
-      height:392px;
+    }
+    .button-group{
+      height:120px;
+      border-top: 1px solid rgba(0,0,0,0.2);
+      @include box-sizing-border;
+      &:after{
+        @include after-clear;
+      }
+      .btn{
+        width:120px;
+        float:left;
+        display:inline-block;
+        margin-right:15px;
+        font-size:13px;
+        background:$nav-dark;
+        margin-top:15px;
+      }
     }
   }
+}
+.pageload-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 00px;
+  left:0px;
+  visibility: hidden;
+}
+
+.pageload-overlay.show {
+  visibility: visible;
+}
+
+.pageload-overlay svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.pageload-overlay svg path {
+  fill: #fff;
+}
+.pageload-overlay::after,
+.pageload-overlay::before {
+  content: '';
+  position: fixed;
+  width: 20px;
+  height: 20px;
+  top: 55%;
+  left: 60%;
+  margin: -10px 0 0 -10px;
+  border-radius: 50%;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 1000;
+  -webkit-transition: opacity 0.15s, visibility 0s 0.15s;
+  transition: opacity 0.15s, visibility 0s 0.15s;
+}
+
+.pageload-overlay::after {
+//  background: #6cc88a;
+  background:$blue;
+  -webkit-transform: translateX(-20px);
+  transform: translateX(-20px);
+  -webkit-animation: moveRight 0.6s linear infinite alternate;
+  animation: moveRight 0.6s linear infinite alternate;
+}
+
+.pageload-overlay::before {
+//  background: #4fc3f7;
+  background: $red;
+  -webkit-transform: translateX(20px);
+  transform: translateX(20px);
+  -webkit-animation: moveLeft 0.6s linear infinite alternate;
+  animation: moveLeft 0.6s linear infinite alternate;
+}
+@-webkit-keyframes moveRight {
+  to { -webkit-transform: translateX(20px); }
+}
+
+@keyframes moveRight {
+  to { transform: translateX(20px); }
+}
+
+@-webkit-keyframes moveLeft {
+  to { -webkit-transform: translateX(-20px); }
+}
+
+@keyframes moveLeft {
+  to { transform: translateX(-20px); }
+}
+
+.pageload-loading.pageload-overlay::after,
+.pageload-loading.pageload-overlay::before {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
 }
