--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -1,9 +1,9 @@
-<div class="report-menu">
+<div class="report-menu" id="report-menu">
 <section>
   <div class="header">
     <p>Report Center</p>
   </div>
-  <ul>
+  <ul id="reports-center-list">
     <p>Quality Gate</p>
     <li><a class="active" href="#current-status"><i class="icon-adjust mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
     <li><a><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
@@ -16,3 +16,8 @@
   <a class="btn btn-success snap">Snap shot</a>
 </section>
 </div>
+<div id="preloader" class="pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z">
+  <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 80 60" preserveAspectRatio="none">
+    <path d="M30,30 50,30 50,30 30,30 Z"/>
+  </svg>
+</div><!-- /pageload-overlay -->
