--- a/app/views/reports/_data-view.html.erb
+++ b/app/views/reports/_data-view.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="right">
       <p><span>Current time:</span><span id="current-clock"></span></p>
-      <select id="vechile-select">
+      <select id="vehicle-select">
         <option>Vehicle_1</option>
         <option>Vehicle_2</option>
         <option>Vehicle_3</option>
